# lwriter

./: .gitignore  ARCHITECTURE.md  BUILD.md  DESIGN.md  LICENSE  PROGRESS.md  README.md  SETUP.md
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord.rs  lib.rs  main.rs
ui/: app.js  index.html  markdown.js  styles.css
