[package]
name = "lwriter"
version = "0.1.0"
description = "A calm, FOSS writing app for Windows"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
trash = "5"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
